# odysseus

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
data/: com.github.danlupei.odysseus.appdata.xml  com.github.danlupei.odysseus.desktop
debian/: changelog  control  copyright
src/: odysseus.vala
